src/tests/cases/snapshots/jett__tests__cases__ui__delete_file_no_confirmation-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
        8.0K (3 files), fre d: 4.0K | /tmp/jet _te ts/d l te_file_no_confirmation                                                                                                             
                                                                                                                              ─                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file3                                                                                             
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                          4.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                 subfolder1/ (+1 descendants)                                                                                 
                                                                                          4.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                 1 items; % of folder                                                                                                         
                                                                 #1 file1         [####################################] 100%                                                                 
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                              ─                                                               
                                                                                                                                                                                              
                                                                                                                                     t    themes, <q> - quit
